--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "date-fns": "^4.1.0",
     "fetch": "^1.1.0",
+    "game_theory": "file:",
     "react-router-dom": "^6.27.0"
   }
 }
